<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login">Login</string>
    <string name="logging_in">Logging In…</string>
    <string name="saving">Saving…</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="amount">Amount</string>
    <string name="description">Description(Optional)</string>
    <string name="logout">Logout</string>
    <!-- <string name="name_on_card">Name on card</string> -->
    <string name="card_number">Card Number</string>
    <string name="account_type">com.payUMoney.sdk.auth.account</string>
    <string name="cvv">CVV</string>
    <string name="choose_a_card">Choose a card</string>
    <string name="add_card">Add a new card</string>
    <string name="card_saved">Your card has been saved</string>
    <string name="use_new_card">Use a new card</string>
    <string name="choose_other_option">Choose other option</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="card_will_be_encrypted">Your card details are encrypted</string>
    <string name="tos_n_privacy">By signing up you agree to <a href="https://www.payumoney.com/termsandconditions.html">Terms of Service</a></string>
    <string name="inactivity">You have been logged out due to inactivity</string>
    <string name="delete_card">Delete card?</string>
    <string name="no_cards">All your saved cards will be shown here</string>
    <string name="yes">Yes</string>
    <string name="ok">@android:string/ok</string>
    <string name="my_cards">My Cards</string>
    <string name="password">Password</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="enter_cvv_number">Enter CVV Number</string>
    <string name="enter_cvv_number_optional">Enter CVV(Optional if not present)</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading</string>
    <string name="pay">Pay</string>
    <string name="sign_up">Sign Up</string>
    <string name="cvv_not_stored">Your CVV number will not be stored</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="netbankingNote">Note: In the next step you will be redirect to your bank website to verify your account</string>
    <string name="pay_now">Pay Now</string>
    <string name="forgot_password"><a href="#">Forgot Password?</a></string>
    <!-- <string name="contact_us">Contact Us</string> -->
    <string name="delete">×</string>
    <string name="expiry_date_of_card">Expiry date of card</string>
    <string name="save_card">Save card</string>
    <string name="email_sent_apologies_from_us">We\'ve sent you an email at your email address. Our apologies for the trouble you had to face</string>
    <string name="recover_password">Recover my password!</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="valid_phone_number">Please enter a valid phone number</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="slogan">A better way to pay</string>
    <string name="email_is_required">Your email is required</string>
    <string name="cc">Credit Card</string>
    <string name="dc">Debit Card</string>
    <string name="choose_payment_mode">Choose Payment Mode</string>
    <string name="choose_another_mode">Choose another mode</string>
    <string name="store_card_next_time">Store this card for next time</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="card_label">Card Label</string>
    <string name="dont_have_account">Don\'t have an account? <a href="#">Sign Up</a></string>
    <string name="already_have_account">Already have an account?<a href="#"> Login    </a></string>
    <string name="remembered_password">Remembered Password? <a href="#"> Login    </a></string>
    <string name="message_is_required">Please enter a message</string>
    <!-- <string name="expiry_in_future">This card has already expired</string> -->
    <!-- <string name="expiry_date_required">Please mention the expiry date</string> -->
    <string name="amount_is_required">Please enter some amount</string>
    <string name="email_is_invalid">This email appears to be invalid</string>
    <!-- <string name="card_label_is_required">Please enter a card label</string> -->
    <!-- <string name="card_number_is_required">Please enter your card number</string> -->
    <!-- <string name="timeout">Your internet connection is not allowing us to reach PayUMoney. Please try again with a faster connection</string> -->
    <string name="trans_history">Transaction History</string>
    <!-- <string name="user_profile">My Profile</string> -->

    <string name="trans_prompt">All Transactions</string>

    <string-array name="trans_arrays">
        <item>All Transactions</item>
        <item>Last 24 Hours Transactions</item>
        <item>Last 7 Days Transactions</item>
        <item>Last 30 Days Transactions</item>
    </string-array>
    <!-- <string name="Fragment1">Contact Information</string> -->
    <!-- <string name="Fragment2">Address Detail</string> -->
    <!-- <string name="Fragment3">Reset Password</string> -->
    <string name="password_updated">Password updated successfully</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="select_payment_method">Select your preferred payment method</string>
    <string name="select_coupon_option">Yoo-Hoo, coupons available  </string>
    <string name="view_coupon"><a href="#">View Coupons</a></string>
    <string name="view_details"><a href="#">View Details</a></string>
    <string name="congrats">Congratulations,</string>
    <string name="selected_coupon">applied    <a href="#">Remove</a></string>
    <string name="remove"><a href="#">Remove</a></string>
    <string name="main_button_text">See a hot new custom dialog!</string>
    <string name="alert_image_content_description">Alert Image</string>


    <!-- <string name="uploading_image">Uploading Image..</string> -->
    <string name="confirmation_sms">Mobile Number For Confirmation SMS</string>
    <string name="card_name">Card name</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expires">Expiry</string>
    <string name="enter_card_details">Enter card Details</string>
    <string name="pay_by_cash_card">Pay by Cash Card</string>
    <string name="edit_card">Edit card</string>
    <string name="pay_by_emi">Pay by Emi</string>
    <string name="credit_card">Credit card</string>
    <string name="debit_card">Debit card</string>
    <string name="select_save_card">Select a saved card or use a new one</string>
    <string name="no_card_found">No card found!</string>
    <string name="cashCardNote">Note: In the next step you will be redirected to your bank\'s website to verify yourself.</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card">if you have CVV and Expiry on your card</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="status">Status</string>
    <string name="eligible_for_discount">Congrats! You are eligible for a discount of Rs. %1$f</string>
    <string name="enter_credit_card_details">Please enter credit card details</string>
    <string name="enter_debit_card_details">Please enter debit card details</string>
    <string name="title_activity_auth_service">AuthService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authenticator">Authenticator</string>
    <string name="title_activity_auth">authAct</string>

</resources>